code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_46.wast
(assert_invalid
  (module (func $type-value-f64-vs-f32 (result f32)
    (block (result f64) (f32.const 0.0))
  ))
  "type mismatch"
)